--- a/credentials.yml
+++ b/credentials.yml
@@ -31,3 +31,7 @@ rest:
 # for the Rasa Enterprise "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
   url: "http://localhost:5002/api"
+stt:
+  speech_recognition:
+    library_name: "speech_recognition"
+
